--- a/x11/kdelibs11/files/kde.dist
+++ b/x11/kdelibs11/files/kde.dist
@@ -20,6 +20,8 @@
             Network
             ..
             Settings
+                Network
+                ..
             ..
             System
             ..
