--- a/databases/p5-MyObject/Makefile
+++ b/databases/p5-MyObject/Makefile
@@ -7,6 +7,7 @@
 
 PORTNAME=	MyObject
 PORTVERSION=	1.2
+PORTREVISION=	1
 CATEGORIES=	databases perl5
 MASTER_SITES=	http://www.frontierworld.com/perl/
 PKGNAMEPREFIX=	p5-
