--- a/news/Makefile
+++ b/news/Makefile
@@ -38,6 +38,9 @@
     SUBDIR += slrn
     SUBDIR += slurp
     SUBDIR += suck
+    SUBDIR += t-gnus-emacs20
+    SUBDIR += t-gnus-mule
+    SUBDIR += t-gnus-xemacs21-mule
     SUBDIR += tin
     SUBDIR += trn
     SUBDIR += trn4
