--- a/chinese/netscape47-navigator/Makefile
+++ b/chinese/netscape47-navigator/Makefile
@@ -1,6 +1,6 @@
 # New ports collection makefile for: zh Big5/GB-ized Netcape
 # Date created:		23 Oct 2000
-# Whom:			Jing-Tang Keith Jang <keith@freebsd.sinica.edu.tw>
+# Whom:			Jing-Tang Keith Jang <keith@FreeBSD.org>
 #
 # $FreeBSD$
 #
