Use the correct pthread.h when compiling liblgcc_r.  Allow thread stacks larger than 16kB.  Make sure to call global destructors during shutdown.
PR:		ports/22429
Submitted by:	tegge

--- a/devel/linuxthreads/files/Makefile.libgcc_r
+++ b/devel/linuxthreads/files/Makefile.libgcc_r
@@ -4,6 +4,7 @@ DESTDIR=/usr/local/
 LIBDIR= lib/
 
 CFLAGS+=-D_PTHREADS -I../
+CFLAGS+=-I../sysdeps/i386 -I../sysdeps/pthread -I../sysdeps/unix/sysv/linux
 
 .include "/usr/src/gnu/lib/libgcc/Makefile"
 
