--- a/x11-wm/afterstep-stable/Makefile
+++ b/x11-wm/afterstep-stable/Makefile
@@ -6,18 +6,17 @@
 #
 
 PORTNAME=	afterstep
-PORTVERSION= 	1.8.0
+PORTVERSION= 	1.8.4
 CATEGORIES=	x11-wm afterstep
 MASTER_SITES=	${MASTER_SITE_AFTERSTEP}
 MASTER_SITE_SUBDIR=	stable
 DISTNAME=	AfterStep-${PORTVERSION}
 
-MAINTAINER=	dima@Chg.ru
+MAINTAINER=	demon@FreeBSD.org
 
 LIB_DEPENDS=	png.4:${PORTSDIR}/graphics/png \
 		jpeg.9:${PORTSDIR}/graphics/jpeg
 
-NO_LATEST_LINK=	yes
 USE_BZIP2=	yes
 USE_X_PREFIX=	yes
 USE_XPM=	yes
