--- a/astro/glunarclock/Makefile
+++ b/astro/glunarclock/Makefile
@@ -6,12 +6,15 @@
 #
 
 PORTNAME=	glunarclock
-PORTVERSION=	0.1
-PORTREVISION=	1
+PORTVERSION=	0.11
 CATEGORIES=	astro gnome
-MASTER_SITES=	http://www.fortunecity.de/naturpark/bienen/99/download/
+MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
+MASTER_SITE_SUBDIR=	${PORTNAME}
+DISTNAME=	${PORTNAME}_${PORTVERSION}-1
 
 MAINTAINER=	sobomax@FreeBSD.org
+
+WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
 
 USE_X_PREFIX=	yes
 GNU_CONFIGURE=	yes
@@ -21,7 +24,7 @@ CONFIGURE_ENV=	CPPFLAGS="-I${LOCALBASE}/include" \
 
 pre-patch:
 	@${PERL} -pi -e 's|-lpthread|-pthread|g ; \
-			 s|DATADIRNAME=lib|DATADIRNAME=share|g' ${WRKSRC}/configure
+		 s|DATADIRNAME=lib|DATADIRNAME=share|g' ${WRKSRC}/configure
 	@find ${WRKSRC} -name "Makefile.in" | xargs ${PERL} -pi -e \
 		's|\$\(datadir\)/gnome/|\$\(datadir\)/|g ; \
 		 s|\$\(datadir\)/locale|\$\(prefix\)/share/locale|g'
