--- a/www/mod_python3/Makefile
+++ b/www/mod_python3/Makefile
@@ -1,57 +1,40 @@
 # New ports collection makefile for:	mod_python
 # Date created:				28 August 2000
-# Whom:					Hye-Shik Chang <perky@freebsd-kr.org>
+# Whom:					Hye-Shik Chang <perky@python.or.kr>
 #
 # $FreeBSD$
 #
 
 PORTNAME=	mod_python
-PORTVERSION=	2.6
+PORTVERSION= 	2.6.3
 CATEGORIES=	www python
-MASTER_SITES=	ftp://freebsd-kr.org/pub/FreeBSD/ \
-		http://www.modpython.org/dist/ \
-		ftp://ftp.python.org/pub/python/src/ \
-		ftp://ftp.cdrom.com/pub/python/www.python.org/ftp/python/src/ \
-		http://sunsite.org.uk/Mirrors/ftp.python.org/pub/www.python.org/ftp/python/src/
+MASTER_SITES=	http://www.modpython.org/dist/ \
+		http://www.pythonlabs.com/products/python2.0/downloads/
 DISTFILES=      mod_python-${PORTVERSION}.tgz ${PYTHON_DISTFILE}
+DIST_SUBDIR=	python
 
-MAINTAINER=	perky@freebsd-kr.org
+MAINTAINER=	perky@python.or.kr
 
-BUILD_DEPENDS=	${LOCALBASE}/sbin/apxs:${PORTSDIR}/www/apache13 \
-		${LOCALBASE}/bin/${PYTHON_VERSION}:${PORTSDIR}/lang/python15
+BUILD_DEPENDS=	${LOCALBASE}/sbin/apxs:${PORTSDIR}/www/apache13
 RUN_DEPENDS=	${LOCALBASE}/sbin/apxs:${PORTSDIR}/www/apache13
 
-APXS=			${PREFIX}/sbin/apxs
-PYTHON_VERSION=		python1.5
-PYTHON_NO_DEPENDS=	yes
+PYTHON_WRKSRC=	${WRKSRC}/../Python-${PYTHON_VERSION:S/python//g}
+APXS=		${PREFIX}/sbin/apxs
 
-.if exists(${APXS})
-AP_LIBEXEC!=    ${APXS} -q LIBEXEC
-.else
-AP_LIBEXEC=     ${PREFIX}/libexec/apache
-.endif
+GNU_CONFIGURE=	yes
+USE_PYTHON=	yes
+CONFIGURE_ARGS=	--with-apxs=${LOCALBASE}/sbin/apxs \
+		--with-python=${PYTHON_WRKSRC}
+CONFIGURE_ENV=	PYTHON_BIN=${LOCALBASE}/bin/python
+PLIST_SUB+=	PYTHON_LIBPATH=${PYTHON_LIBPATH:S/^${LOCALBASE}//g}lib
 
-COMPILEALL=	${PYTHON_LIBDIR}/compileall.py
+pre-configure:
+	cd ${PYTHON_WRKSRC} && ./configure --without-threads && cd Modules && ${MAKE} -f Makefile.pre Makefile
 
-PLIST_SUB+=	AP_LIBEXEC=${AP_LIBEXEC:S/^${PREFIX}\///} \
-		PYTHON_SITELIBDIR="${PYTHON_SITELIBDIR:S/^${PREFIX}\///}"
-
-do-build:
-	@${ECHO} "=> Building lib${PYTHON_VERSION}.a for mod_python ..."
-	cd ${PYTHON_WRKSRC} && ./configure && ${MAKE} lib${PYTHON_VERSION}.a
-	@${ECHO} "=> Building mod_python.so ..."
-	cd ${WRKSRC}/src;${APXS} -I../../Python-1.5.2/Include -I../../Python-1.5.2 -I${WRKSRC}/src/include -c mod_python.c -lm ../../Python-1.5.2/lib${PYTHON_VERSION}.a
-	${PYTHON_CMD} ${COMPILEALL} ${WRKSRC}/lib/python/mod_python
-
-do-install:
-	cd ${WRKSRC}/src;${APXS} -i -a mod_python.so
-	${MKDIR} ${PYTHON_SITELIBDIR}/mod_python
-	${INSTALL_SCRIPT} ${WRKSRC}/lib/python/mod_python/* ${PYTHON_SITELIBDIR}/mod_python
+pre-build:
+	cd ${PYTHON_WRKSRC} && ${MAKE}
 
 post-install:
-	@${ECHO_MSG} "======================================================="
-	@${ECHO_MSG} "  mod_python was installed successfully."
-	@${ECHO_MSG} "  please read the manual at http://www.modpython.org"
-	@${ECHO_MSG} "======================================================="
+	@${CAT} ${PKGMESSAGE}
 
 .include <bsd.port.mk>
