Add fidelio. Fidelio is a GNOME-based client for Hotline, a proprietary protocol that combines ftp-like, irc-like and news-like functions in one package.

--- a/net/Makefile
+++ b/net/Makefile
@@ -68,6 +68,7 @@
     SUBDIR += etherboot
     SUBDIR += ethereal
     SUBDIR += everybuddy
+    SUBDIR += fidelio
     SUBDIR += flow-tools
     SUBDIR += fping
     SUBDIR += freewais-sf
