Add AUTO{CONF,MAKE}_{ENV,ARGS}.  Among other things, this will fix audio/libao, audio/libogg, audio/libvorbis and audio/vorbis-tools which need --add-missing to be passed to automake.
PR:		22610
Submitted by:	Theo van Klaveren <t.vanklaveren@student.utwente.nl>, roger, sobomax

--- a/audio/libogg/Makefile
+++ b/audio/libogg/Makefile
@@ -21,6 +21,7 @@ WRKSRC=		${WRKDIR}/ogg
 
 ACLOCAL?=	${LOCALBASE}/bin/aclocal
 AUTOHEADER?=	${LOCALBASE}/bin/autoheader
+AUTOMAKE_ARGS=	--add-missing
 
 post-patch:
 	cd ${WRKSRC} && ${ACLOCAL}
