--- a/japanese/FreeWnn-lib/Makefile
+++ b/japanese/FreeWnn-lib/Makefile
@@ -21,6 +21,7 @@ INSTALL_TARGET=	install install.man
 GNU_CONFIGURE=  yes
 USE_AUTOCONF=	yes
 USE_LIBTOOL=	yes
+INSTALLS_SHLIB=	yes
 
 WMMVERSION=	1.1.1-a017
 
