--- a/databases/p5-GDBM/Makefile
+++ b/databases/p5-GDBM/Makefile
@@ -14,7 +14,7 @@ MASTER_SITES=	${MASTER_SITE_PERL_CPAN}
 MASTER_SITE_SUBDIR=	../../src
 DISTNAME=	perl5.005_03
 
-MAINTAINER=	nsayer@FreeBSD.ORG
+MAINTAINER=	ports@FreeBSD.ORG
 
 LIB_DEPENDS=	gdbm.2:${PORTSDIR}/databases/gdbm
 
