--- a/databases/unixODBC/Makefile
+++ b/databases/unixODBC/Makefile
@@ -11,7 +11,7 @@ PORTVERSION=	1.8.8
 CATEGORIES=	databases
 MASTER_SITES=	http://www.unixodbc.org/
 
-MAINTAINER=	nsayer@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 
 USE_LIBTOOL=	yes
 INSTALLS_SHLIB=	yes
