--- a/chinese/xmms/Makefile
+++ b/chinese/xmms/Makefile
@@ -10,12 +10,10 @@ MASTERDIR=	${.CURDIR}/../../audio/xmms
 PATCH_SITES=	${MASTER_SITE_LOCAL}
 PATCH_SITE_SUBDIR=	sobomax
 
+EXTRA_PATCHES=	${.CURDIR}/files/extra-patch-xmms-1.2.x-xfont
+
 MAINTAINER=	clive@CirX.ORG
 
-RUN_DEPENDS=	${X11BASE}/lib/X11/fonts/TrueType/bsmi00lp.ttf:${PORTSDIR}/chinese/arphicttf
-
-pre-patch:
-	@( cd ${WRKSRC}; \
-		${PATCH} -sp1 < ${.CURDIR}/files/extra-patch-xmms-1.2.x-xfont ; )
+#RUN_DEPENDS=	${X11BASE}/lib/X11/fonts/TrueType/bsmi00lp.ttf:${PORTSDIR}/chinese/arphicttf
 
 .include "${MASTERDIR}/Makefile"
