--- a/www/apache13+ipv6/Makefile
+++ b/www/apache13+ipv6/Makefile
@@ -6,7 +6,7 @@
 #
 
 PORTNAME=	apache+ipv6
-PORTVERSION= 	1.3.12
+PORTVERSION=	1.3.14
 CATEGORIES=	www ipv6
 MASTER_SITES=	http://www.apache.org/dist/ \
 		ftp://ftp.ccs.neu.edu/net/mirrors/ftp.apache.org/apache/dist/ \
@@ -26,7 +26,7 @@ MASTER_SITES=	http://www.apache.org/dist/ \
 DISTNAME=	apache_${PORTVERSION}
 
 PATCH_SITES=	ftp://ftp.kame.net/pub/kame/misc/
-PATCHFILES=	apache-1.3.12-v6-20000908a.diff.gz
+PATCHFILES=	apache-1.3.14-v6-20001114.diff.gz
 PATCH_DIST_STRIP=	-p1
 
 MAINTAINER=	sumikawa@FreeBSD.org
@@ -45,15 +45,17 @@ CONFIGURE_ARGS=	\
 		--with-layout=${FILESDIR}/FreeBSD.layout:FreeBSD \
 		--suexec-docroot=${PREFIX}/www/data \
 		--without-confadjust \
-		--enable-shared=remain \
 		--enable-rule=INET6 \
 		--enable-module=most \
 		--enable-module=auth_db \
-		--disable-module=auth_dbm
+		--enable-module=mmap_static \
+		--disable-module=auth_dbm \
+		--enable-shared=max
 
 OPTIM=		-DHARD_SERVER_LIMIT=512 \
 		-DDOCUMENT_LOCATION=\\"${PREFIX}/www/data/\\" \
-		-DDEFAULT_PATH=\\"/bin:/usr/bin:${PREFIX}/bin\\"
+		-DDEFAULT_PATH=\\"/bin:/usr/bin:${PREFIX}/bin\\" \
+		-DACCEPT_FILTER_NAME=\\"httpready\\"
 
 .if defined(APACHE_PERF_TUNING) && ${APACHE_PERF_TUNING} == YES
 OPTIM+=		-DBUFFERED_LOGS
@@ -70,9 +72,6 @@ MAN8=		ab.8 apachectl.8 apxs.8 httpd.8 logresolve.8 rotatelogs.8
 .if ${OSVERSION} < 400014
 BROKEN=		"build only on IPv6 environment"
 .endif
-
-pre-configure:
-	${CHMOD} 755 ${WRKSRC}/${CONFIGURE_SCRIPT}
 
 post-install:
 	@if [ ! -f ${PREFIX}/etc/rc.d/apache.sh ]; then \
