--- a/japanese/gnomecore/Makefile
+++ b/japanese/gnomecore/Makefile
@@ -6,7 +6,7 @@
 #
 
 # This port does not work with another version of master port.
-#PORTVERSION=	1.2.3
+#PORTVERSION=	1.2.4
 CATEGORIES=	japanese x11 gnome
 
 MASTERDIR=	${.CURDIR}/../../x11/gnomecore
@@ -14,5 +14,7 @@ MASTERDIR=	${.CURDIR}/../../x11/gnomecore
 EXTRA_PATCHES=	${.CURDIR}/files/patch-*
 
 MAINTAINER=	nakai@FreeBSD.org
+
+BUILD_DEPENDS=	gnome-libs-jp:${PORTSDIR}/japanese/gnomelibs
 
 .include "${MASTERDIR}/Makefile"
