--- a/textproc/pspell/Makefile
+++ b/textproc/pspell/Makefile
@@ -12,7 +12,7 @@ MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
 MASTER_SITE_SUBDIR=	${PORTNAME}
 DISTNAME=	${PORTNAME}-.11.2
 
-MAINTAINER=	ade@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 
 USE_NEWGCC=	yes
 USE_LIBTOOL=	yes
