Resign as maintainer of KDE2 ports, having brought them up from inception to the final release of KDE 2.0.  Kevin Lo <kevlo@FreeBSD.org> will continue as the new maintainer.  He has commit privileges on the KDE tree, making him an excellent candidate for this job.  I'll be behind the scenes for awhile, since there are some structural changes I'd like to make but I'd rather have Kevin do the work.  Please, people, direct your patches at Kevin and watch his "freetime deprivation process" _really_ start.  :-P

--- a/converters/kdesupport2/Makefile
+++ b/converters/kdesupport2/Makefile
@@ -11,7 +11,7 @@ CATEGORIES=	converters kde
 MASTER_SITES=	${MASTER_SITE_KDE}
 MASTER_SITE_SUBDIR=	stable/${PORTVERSION}/distribution/tar/generic/src
 
-MAINTAINER=	will@FreeBSD.org
+MAINTAINER=	kevlo@FreeBSD.org
 
 BUILD_DEPENDS=	jade:${PORTSDIR}/textproc/jade \
 		${PREFIX}/share/sgml/linuxdoc:${PORTSDIR}/textproc/linuxdoc
