Add mahogany, a threaded X11 mail and news client with an embedded python interpreter.
PR:		22882
Submitted by:	S. Kiernan <sk-ports@vegamuse.org>

--- a/mail/Makefile
+++ b/mail/Makefile
@@ -46,6 +46,7 @@
     SUBDIR += lbdb
     SUBDIR += listar
     SUBDIR += listmanager
+    SUBDIR += mahogany
     SUBDIR += mailagent
     SUBDIR += mailcrypt
     SUBDIR += maildrop
