totd 1.1p4 is a DNS proxy that supports IPv6 <==> IPv4 record translation
Obtained from:  OpenBSD

--- a/net/Makefile
+++ b/net/Makefile
@@ -270,6 +270,7 @@
     SUBDIR += tinyfugue
     SUBDIR += tn3270
     SUBDIR += tn5250
+    SUBDIR += totd
     SUBDIR += traceroute
     SUBDIR += trafd
     SUBDIR += trafshow
