The pkg-install script incorrectly listed the pid file path as /var/run/${name}.pid.  It's actually /var/run/${name}/${name}.pid.
Note, users who have previously installed this port will need to manually fix
their netsyslog.conf files.

Reported by:	Hans Brand <hans at marcans dot nl>

--- a/audio/squeezeboxserver/files/pkg-install.in
+++ b/audio/squeezeboxserver/files/pkg-install.in
@@ -13,7 +13,7 @@ statedir=%%SLIMDBDIR%%
 cachedir=${statedir}/cache
 conffile=${statedir}/squeezecenter.conf
 playlistdir=${statedir}/playlists
-pidfile=/var/run/${name}.pid
+pidfile=/var/run/${name}/${name}.pid
 newsyslogfile=/etc/newsyslog.conf
 logcomment="# added by audio/squeezecenter port"
 serverlogfile=/var/log/squeezecenter/server.log
