--- a/audio/squeezecenter/files/pkg-install.in
+++ b/audio/squeezecenter/files/pkg-install.in
@@ -13,7 +13,7 @@ statedir=%%SLIMDBDIR%%
 cachedir=${statedir}/cache
 conffile=${statedir}/squeezecenter.conf
 playlistdir=${statedir}/playlists
-pidfile=/var/run/${name}.pid
+pidfile=/var/run/${name}/${name}.pid
 newsyslogfile=/etc/newsyslog.conf
 logcomment="# added by audio/squeezecenter port"
 serverlogfile=/var/log/squeezecenter/server.log
