Vchkuser is a helper program so qmail-smtpd can accept only true users (or alias) from vpopmail database.
WWW: http://sourceforge.net/projects/vchkuser

PR:		ports/119939
Submitted by:	Luiz Otavio O Souza <loos.br@gmail.com>
Approved by:	araujo (mentor)

--- a/mail/Makefile
+++ b/mail/Makefile
@@ -656,6 +656,7 @@
     SUBDIR += usendmail
     SUBDIR += vacation
     SUBDIR += vbsfilter
+    SUBDIR += vchkuser
     SUBDIR += vexim
     SUBDIR += vm
     SUBDIR += vm-pop3d
