Introduce autoconf 2.62, which can now be used by other ports with the appropriate USE_AUTOTOOLS stanza.
Note that the mass-conversion from autoconf 2.61 -> 2.62 will take place
at a later date.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -66,6 +66,7 @@
     SUBDIR += autoconf-wrapper
     SUBDIR += autoconf213
     SUBDIR += autoconf261
+    SUBDIR += autoconf262
     SUBDIR += autodia
     SUBDIR += autodist
     SUBDIR += autogen
