Remove librt dependency because it is not needed actually.

--- a/cad/klayout/files/patch-config-Makefile.conf
+++ b/cad/klayout/files/patch-config-Makefile.conf
@@ -23,4 +23,4 @@
 +LOPT=-Wl,-E -o
 +LOPT_SO=-shared -fPIC -o
 +
-+LIBS=-L$(QTLIB) -pthread -lQtGui -lQtCore -lQtXml -lrt -lstdc++ -lcrypt
++LIBS=-L$(QTLIB) -pthread -lQtGui -lQtCore -lQtXml -lstdc++ -lcrypt
