Jmol is a Java molecular viewer for three-dimensional chemical structures. Features include reading a variety of file types and output from quantum chemistry programs, and animation of multi-frame files and computed normal modes from quantum programs.
WWW:  http://sourceforge.net/projects/jmol/

PR:		ports/123631
Submitted by:	Wen heping <wenheping at gmail.com>

--- a/science/Makefile
+++ b/science/Makefile
@@ -62,6 +62,7 @@
     SUBDIR += hdf5
     SUBDIR += ics
     SUBDIR += isaac-cfd
+    SUBDIR += jmol
     SUBDIR += kmovisto
     SUBDIR += kst
     SUBDIR += lamprop
