The F-1 Spirit remake is mostly identical to the original Konami classic F-1 Spirit game in that you first have to clear tracks in a top-down view with stock cars, rally cars and so on by accumulating points given for finishing in the first places until you actually get to play the Formula 1 tracks.
Otherwise there are quite some enhancements, namely improved graphics,
improved music, more realistic physics, real shape shown in the
maps, camera rotation and zoom, split screen for up to four players,
(online) highscore tables and replay saving.

WWW: http://www.braingames.getput.com/f1spirit/default.asp

PR:		ports/123686
Submitted by:	Dmitry Marakasov <amdmi3 at amdmi3.ru>

--- a/games/Makefile
+++ b/games/Makefile
@@ -215,6 +215,7 @@
     SUBDIR += exmars
     SUBDIR += exult
     SUBDIR += ezquake
+    SUBDIR += f1spirit-remake
     SUBDIR += falconseye
     SUBDIR += farblazer
     SUBDIR += fargoal
