E00Compr is an Open Source ANSI-C library to compress and uncompress Arc/Info Export (E00) files. It can be easily plugged into existing E00 translators to add support for compressed E00 files simply by replacing the existing translator's read/write function by the E00ReadNextLine() and E00WriteNextLine() functions provided by the library.
WWW: http://avce00.maptools.org/e00compr/

PR:		ports/123396
Submitted by:	Wen Heping <wenheping at gmail.com>

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -273,6 +273,7 @@
     SUBDIR += duplo
     SUBDIR += dwarfdump
     SUBDIR += dyncall
+    SUBDIR += e00compr
     SUBDIR += e4graph
     SUBDIR += e_dbus
     SUBDIR += ebnf2yacc
