AVCE00 is an Open Source ANSI-C library that makes Arc/Info (binary) Vector Coverages appear as E00! It allows you to read and write binary coverages just as if they were E00 files.
The C library can be easily plugged into existing E00 translators to add
support for binary coverages simply by replacing your existing translator's
read/write function with the functions provided by the library.

WWW: http://avce00.maptools.org/avce00/

PR:		ports/123412
Submitted by:	Wen Heping <wenheping at gmail.com>

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -81,6 +81,7 @@
     SUBDIR += autotools
     SUBDIR += avalon-framework
     SUBDIR += avarice
+    SUBDIR += avce00
     SUBDIR += avltree
     SUBDIR += avr-binutils
     SUBDIR += avr-gcc
