The SMS Server Tools 3 is a SMS Gateway software which can send and receive short messages through GSM modems and mobile phones.
This is the enhanced version 3.x maintained by Mr. Keijo "Keke" Kasvi.

WWW: http://smstools3.kekekasvi.com

--- a/comms/Makefile
+++ b/comms/Makefile
@@ -112,6 +112,7 @@
     SUBDIR += seyon
     SUBDIR += sms_client
     SUBDIR += smstools
+    SUBDIR += smstools3
     SUBDIR += snooper
     SUBDIR += soundmodem
     SUBDIR += spandsp
