--- a/net-mgmt/aspathtree/files/patch-etc::ASpath-tree.config
+++ b/net-mgmt/aspathtree/files/patch-etc::ASpath-tree.config
@@ -8,7 +8,7 @@ $FreeBSD$
  # scripts. It is the directory where the script create-bgp-pages is
  # located
 -HOMEDIR = /usr/local/ASpath-tree-v4.2
-+HOMEDIR = %%PREFIX%%/var/aspathree/
++HOMEDIR = %%PREFIX%%/var/aspathtree/
  
  # Router you are using. Currently supported platforms include Cisco, Juniper
  # and Zebra routers. Allowed values are "CISCO", "JUNIPER" , "ZEBRA" and
