- Unbreak - Update to 5.0.0.e
PR:		123788
Submitted by:	Nick Hilliard <nick@foobar.org> (maintainer)

--- a/deskutils/sugarcrm/Makefile
+++ b/deskutils/sugarcrm/Makefile
@@ -5,15 +5,13 @@
 # $FreeBSD$
 
 PORTNAME=	sugarcrm
-PORTVERSION=	5.0.0b
+PORTVERSION=	5.0.0e
 CATEGORIES=	deskutils www
 MASTER_SITES=	http://dl.sugarforge.org/sugarcrm/SugarCE5.0Latest/SugarCE5.0.0/
 DISTNAME=	SugarCE-${PORTVERSION}
 
 MAINTAINER=	nick@foobar.org
 COMMENT=	A web based customer relationship management suite
-
-BROKEN=		does not fetch
 
 IGNORE_WITH_MYSQL=	323 40
 USE_PHP=	gd mysql session pcre xml zlib mbstring curl imap
