dvtm brings the concept of tiling window management, popularized by X11-window managers like dwm to the console. As a console window manager it tries to make it easy to work with multiple console based programs like vim, mutt, cmus or irssi.
WWW: http://www.brain-dump.org/projects/dvtm/

PR:		ports/123786
Submitted by:	Beat Gätzi <beat at chruetertee.ch>

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -162,6 +162,7 @@
     SUBDIR += dvdimagecmp
     SUBDIR += dvdisaster
     SUBDIR += dvdtape
+    SUBDIR += dvtm
     SUBDIR += dwatch
     SUBDIR += e2fsprogs
     SUBDIR += ecore-config
