--- a/textproc/uim/files/extra-patch-qt_Makefile.in
+++ b/textproc/uim/files/extra-patch-qt_Makefile.in
@@ -1,10 +1,10 @@
---- qt/Makefile.in.orig	2008-05-06 14:23:16.000000000 +0900
-+++ qt/Makefile.in	2008-05-06 23:25:02.000000000 +0900
+--- qt/Makefile.in.orig	2008-05-17 12:42:12.000000000 +0900
++++ qt/Makefile.in	2008-05-18 23:56:08.000000000 +0900
 @@ -107,10 +107,6 @@
  extraLTLIBRARIES_INSTALL = $(INSTALL)
  LTLIBRARIES = $(applet_LTLIBRARIES) $(extra_LTLIBRARIES) \
  	$(noinst_LTLIBRARIES)
--@QT_IMMODULE_TRUE@@QT_TRUE@libquiminputcontextplugin_la_DEPENDENCIES =  \
+-@QT_IMMODULE_TRUE@@QT_TRUE@libquiminputcontextplugin_la_DEPENDENCIES = $(top_builddir)/uim/libuim-counted-init.la \
 -@QT_IMMODULE_TRUE@@QT_TRUE@	$(top_builddir)/uim/libuim-scm.la \
 -@QT_IMMODULE_TRUE@@QT_TRUE@	$(top_builddir)/uim/libuim.la \
 -@QT_IMMODULE_TRUE@@QT_TRUE@	$(am__append_10)
@@ -56,7 +56,7 @@
  @PREF_TRUE@@QT_TRUE@	uim_pref_qt-pref-keyeditformbase.$(OBJEXT)
  uim_pref_qt_OBJECTS = $(am_uim_pref_qt_OBJECTS) \
  	$(nodist_uim_pref_qt_OBJECTS)
--@PREF_TRUE@@QT_TRUE@uim_pref_qt_DEPENDENCIES =  \
+-@PREF_TRUE@@QT_TRUE@uim_pref_qt_DEPENDENCIES = $(top_builddir)/uim/libuim-counted-init.la \
 -@PREF_TRUE@@QT_TRUE@	$(top_builddir)/uim/libuim-custom.la \
 -@PREF_TRUE@@QT_TRUE@	$(top_builddir)/uim/libuim-scm.la \
 -@PREF_TRUE@@QT_TRUE@	$(top_builddir)/uim/libuim.la
@@ -73,10 +73,10 @@
  uim_toolbar_qt_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) \
  	$(LIBTOOLFLAGS) --mode=link $(CXXLD) \
  	$(uim_toolbar_qt_CXXFLAGS) $(CXXFLAGS) \
-@@ -577,8 +561,8 @@
+@@ -579,8 +563,8 @@
  @QT_IMMODULE_TRUE@@QT_TRUE@libquiminputcontextplugin_la_CXXFLAGS = $(QT_CXXFLAGS) @X_CFLAGS@
  @QT_IMMODULE_TRUE@@QT_TRUE@libquiminputcontextplugin_la_LDFLAGS = $(QT_LDFLAGS) -avoid-version
- @QT_IMMODULE_TRUE@@QT_TRUE@libquiminputcontextplugin_la_LIBADD =  \
+ @QT_IMMODULE_TRUE@@QT_TRUE@libquiminputcontextplugin_la_LIBADD = $(top_builddir)/uim/libuim-counted-init.la \
 -@QT_IMMODULE_TRUE@@QT_TRUE@	$(top_builddir)/uim/libuim-scm.la \
 -@QT_IMMODULE_TRUE@@QT_TRUE@	$(top_builddir)/uim/libuim.la \
 +@QT_IMMODULE_TRUE@@QT_TRUE@	-luim-scm \
@@ -84,7 +84,7 @@
  @QT_IMMODULE_TRUE@@QT_TRUE@	$(am__append_10)
  
  # Toolbar Common
-@@ -588,8 +572,8 @@
+@@ -590,8 +574,8 @@
  
  @QT_TRUE@libtoolbarcommon_la_CXXFLAGS = $(QT_CXXFLAGS)
  @QT_TRUE@libtoolbarcommon_la_LDFLAGS = $(QT_LDFLAGS) -avoid-version
@@ -95,7 +95,7 @@
  
  
  # Toolbar Standalone
-@@ -598,8 +582,8 @@
+@@ -600,8 +584,8 @@
  
  @QT_TRUE@uim_toolbar_qt_CXXFLAGS = $(QT_CXXFLAGS)
  @QT_TRUE@uim_toolbar_qt_LDFLAGS = $(QT_LDFLAGS)
@@ -106,7 +106,7 @@
  
  
  # Toolbar applet
-@@ -608,8 +592,8 @@
+@@ -610,8 +594,8 @@
  
  @APPLET_KDE_TRUE@@QT_TRUE@uim_panelapplet_la_CXXFLAGS = -I@KDE_INCLUDE_DIR@ $(QT_CXXFLAGS)
  @APPLET_KDE_TRUE@@QT_TRUE@uim_panelapplet_la_LDFLAGS = -avoid-version -module -no-undefined -Wl,--no-undefined -Wl,--allow-shlib-undefined -L@KDE_LIB_DIR@ $(QT_LDFLAGS)
@@ -117,7 +117,7 @@
  @APPLET_KDE_TRUE@@QT_TRUE@			      libtoolbarcommon.la  -lkdeui -lkdecore 
  
  
-@@ -617,16 +601,16 @@
+@@ -619,16 +603,16 @@
  @QT_TRUE@uim_candwin_qt_SOURCES = candwin-qt.cpp candwin-qt.h qtgettext.h
  @QT_TRUE@uim_candwin_qt_CXXFLAGS = $(QT_CXXFLAGS)
  @QT_TRUE@uim_candwin_qt_LDFLAGS = $(QT_LDFLAGS)
@@ -138,16 +138,16 @@
  
  
  # Pref
-@@ -643,9 +627,9 @@
- 
+@@ -646,9 +630,9 @@
  @PREF_TRUE@@QT_TRUE@uim_pref_qt_CXXFLAGS = $(QT_CXXFLAGS)
  @PREF_TRUE@@QT_TRUE@uim_pref_qt_LDFLAGS = $(QT_LDFLAGS)
--@PREF_TRUE@@QT_TRUE@uim_pref_qt_LDADD = $(top_builddir)/uim/libuim-custom.la \
+ @PREF_TRUE@@QT_TRUE@uim_pref_qt_LDADD = $(top_builddir)/uim/libuim-counted-init.la \
+-@PREF_TRUE@@QT_TRUE@		       $(top_builddir)/uim/libuim-custom.la \
 -@PREF_TRUE@@QT_TRUE@		       $(top_builddir)/uim/libuim-scm.la \
 -@PREF_TRUE@@QT_TRUE@		       $(top_builddir)/uim/libuim.la
-+@PREF_TRUE@@QT_TRUE@uim_pref_qt_LDADD = -luim-custom \
-+@PREF_TRUE@@QT_TRUE@		        -luim-scm \
-+@PREF_TRUE@@QT_TRUE@		        -luim
++@PREF_TRUE@@QT_TRUE@		       -luim-custom \
++@PREF_TRUE@@QT_TRUE@		       -luim-scm \
++@PREF_TRUE@@QT_TRUE@		       -luim
  
  @QT_TRUE@CLEANFILES = \
  @QT_TRUE@	$(MOC_FILES) \
