FreeBSD driver for newer Option HSDPA USB dongles.
The driver have been tested with the following devices

  * Option GlobeSurfer iCON 7.2 (2.4.6Hd firmware)
  * Option GlobeSurfer iCON 225

Older cards should work just fine with ubsa(4) or any similar
USB-over-serial driver.

Note that this driver should be considered beta.

WWW: http://www.shapeshifter.se/code/hso/

PR:		ports/123680
Submitted by:	Ganael Laplanche <ganael.laplanche at martymac.com>

--- a/comms/Makefile
+++ b/comms/Makefile
@@ -45,6 +45,7 @@
     SUBDIR += hcfmdm
     SUBDIR += hcidump
     SUBDIR += hf
+    SUBDIR += hso-kmod
     SUBDIR += hylafax
     SUBDIR += ib-kmod
     SUBDIR += java-commapi
